--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,49 @@
-form{
-    font-family: Georgia;
+Body {
+    text-align: center;
 }
 
-input[nombre] {
-    font-style: italic;
+form, select{
+    font-size: 20px;
+    background-color: #E7E7E7;
+    font-family: "Roboto", sans-serif;
+    margin: 10px;
+}
+
+input {
+    margin-bottom: 15px;
+    font-family: "Roboto", sans-serif;
+    width: 65%;
+    padding: 10px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box; 
+    border: none; 
+    color: black; 
+    font-size: 12px;
+    resize: horizontal; 
+    
+}
+
+h1{
+    font-size: 30px;
+    background-color: green;
+    text-align: center;
+    color: white;
+}
+
+button {
+    
+    text-align: center;
+	background-color: green;
+	padding: 11px 45px 11px 45px;
+	font-size: 1em; 
+	color: 	white;
+    font-family: "Roboto", sans-serif;
+}
+
+select {
+    font-size: 20px;
+    background-color: white;
+    font-family: Georgia;
+    margin: 10px;
+
 }
