--- a/estiloscar.css
+++ b/estiloscar.css
@@ -1,31 +1,90 @@
-body {
-    background-color:lightgray
-}
+body{
+    height: 100%; 
+    font-family: 'Noto Sans', sans-serif;
+    background-color: rgb(17, 98, 148); 
+  }
 
 h1{
     font-size:x-large;
-    background-color: beige;
     text-align: center;
-    color: black;
+    color: rgb(17, 98, 148); 
     font-family: sans-serif;
 }
 
-form, select{
-    font-size: 15px;
-    font-family: sans-serif;
-    margin: 25px;
+select{
+    font-size: 13px;
+    font-family: 'Verdana', sans-serif;
+    font-weight: 400;
+    color: #444;
+    line-height: 1.3;
+    padding: .4em 1.4em .3em .8em;
+    width: 300px;
+    max-width: 100%; 
+    box-sizing: border-box;
+    border: 1px solid #aaa;
+    box-shadow: 0 1px 0 1px rgba(0,0,0,.03);
+    border-radius: .3em;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: #fff;
+    background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
+      linear-gradient(to bottom, #ffffff 0%,#f7f7f7 100%);
+    background-repeat: no-repeat, repeat;
+    background-position: right .7em top 50%, 0 0;
+    background-size: .65em auto, 100%;
 }
 
 input {
-    margin-bottom: 15px;
-    font-family: sans-serif;
-    width: 50%;
-    padding: 10px;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box; 
-    border: none; 
-    color: black; 
-    font-size: 13px;
-    resize: horizontal; 
+    background-color: #fbfbfb; 
+    width: 408px; 
+    height: 40px; 
+    border-radius: 5px;  
+    border-style: solid; 
+    border-width: 2px; 
+    border-color:  rgb(17, 98, 148); 
+    margin-top: 10px;  
+    padding-left: 10px;
+    margin-bottom: 20px; 
     
 }
+
+textarea{
+    font-family: 'Noto Sans', sans-serif;
+    background-color: #fbfbfb; 
+    width: 405px; 
+    height: 150px; 
+    border-radius: 5px;  
+    border-style: solid; 
+    border-width: 2px; 
+    border-color: rgb(17, 98, 148); 
+    margin-top: 10px;  
+    padding-left: 10px;
+    margin-bottom: 20px; 
+    padding-top: 15px; 
+  }
+  
+
+form{  
+    width: 460px; 
+    height: auto;
+    margin: 80px auto;
+    border-radius: 10px;  
+    padding-top: 30px;
+    padding-bottom: 20px;  
+    background-color: #fbfbfb; 
+    padding-left: 30px; 
+  }
+
+  button {
+    text-decoration: none;
+    padding: 10px;
+    font-weight: 500;
+    font-size: 20px;
+    color: #ffffff;
+    background-color: #1883ba;
+    border-radius: 6px;
+    border: 2px solid #0016b0;
+}
+
+
